--- a/css/default.css
+++ b/css/default.css
@@ -28,7 +28,7 @@ body *{
 
 h1, h2, h3, h4, h5, h6, strong{
     color: var(--mainText);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Press Start 2P', cursive;
     font-weight: 500;
 }
 
@@ -46,8 +46,8 @@ ul{
     list-style: none;
 }
 
-h1 { font-size: 56px;}
-h2 { font-size: 36px;}
+h1 { font-size: 40px;}
+h2 { font-size: 34px;}
 h3 { font-size: 28px;}
 h4 { font-size: 24px;}
 h5 { font-size: 20px;}
